[package]
name = "doneru-backend-guide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["rustls"] }
deadpool-postgres = "0.10"
tokio-postgres = { version = "0.7", features =["with-chrono-0_4"] }
serde = { version = "1", features = ["derive"] }
chrono = { version= "0.4", features = ["serde"] }